Building html template sceleton

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div class="content-container">
-        <main>
-            main
-        </main>
+    <div class="static-container">
+        <header>
+            header
+        </header>
+    </div>
+    <div class="dynamic-container">
         <aside>
             aside
         </aside>
+        <main>
+            main
+        </main>
+    </div>
+    <div class="static-container">
+        <footer>
+            footer
+        </footer>
     </div>
 </body>
 </html>
