Basic header and main sections

--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Static cv website</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <div class="static-container">
         <header>
-            header
+            <div class="logo">
+                <h1 class="bold">Person name</h1>
+            </div>
+            <div class="header-menu">
+                <a class="bold" href="#id">
+                    About me
+                </a>
+                <a class="bold" href="#work-experience">
+                    Work experience
+                </a>
+                <a class="bold" href="#education">
+                    Education
+                </a>
+                <a class="bold" href="#courses-and-ceriticates">
+                    Cources and certificates
+                </a>
+                <a class="bold" href="#skills">
+                    Skills
+                </a>
+                <a class="bold" href="#languages">
+                    Languages
+                </a>
+                <a class="bold" href="#contacts">
+                    Contacts
+                </a>
+            </div>
         </header>
     </div>
     <div class="dynamic-container">
@@ -17,7 +44,27 @@
             aside
         </aside>
         <main>
-            main
+            <section id="about-me">
+                About me
+            </section>
+            <section id="work-experience">
+                Work experience
+            </section>
+            <section id="education">
+                Education
+            </section>
+            <section id="courses-and-ceriticates">
+                Cources and certificates
+            </section>
+            <section id="skills">
+                Skills
+            </section>
+            <section id="languages">
+                Languages
+            </section>
+            <section id="contacts">
+                Languages
+            </section>
         </main>
     </div>
     <div class="static-container">
@@ -26,4 +73,5 @@
         </footer>
     </div>
 </body>
+
 </html>
