Header stylizations and animations for mobile

--- a/index.html
+++ b/index.html
@@ -14,29 +14,37 @@
             <div class="logo">
                 <h1 class="bold">Person name</h1>
             </div>
-            <div class="header-menu">
-                <a class="bold" href="#id">
-                    About me
-                </a>
-                <a class="bold" href="#work-experience">
-                    Work experience
-                </a>
-                <a class="bold" href="#education">
-                    Education
-                </a>
-                <a class="bold" href="#courses-and-ceriticates">
-                    Cources and certificates
-                </a>
-                <a class="bold" href="#skills">
-                    Skills
-                </a>
-                <a class="bold" href="#languages">
-                    Languages
-                </a>
-                <a class="bold" href="#contacts">
-                    Contacts
-                </a>
+            <div class="header-wrapper">
+                <button>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </button>
+                <div class="header-menu">
+                    <a class="bold" href="#id">
+                        About me
+                    </a>
+                    <a class="bold" href="#work-experience">
+                        Work experience
+                    </a>
+                    <a class="bold" href="#education">
+                        Education
+                    </a>
+                    <a class="bold" href="#courses-and-ceriticates">
+                        Cources and certificates
+                    </a>
+                    <a class="bold" href="#skills">
+                        Skills
+                    </a>
+                    <a class="bold" href="#languages">
+                        Languages
+                    </a>
+                    <a class="bold" href="#contacts">
+                        Contacts
+                    </a>
+                </div>
             </div>
+           
         </header>
     </div>
     <div class="dynamic-container">
@@ -45,7 +53,31 @@
         </aside>
         <main>
             <section id="about-me">
-                About me
+                <article>
+                    <div class="picture-container">
+                        <img src="images/pexels-simon-robben-614810.jpg" alt>
+                    </div>
+                    <div class="content-container">
+                        <header>
+                            <h2>About me</h2>
+                        </header>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+                            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                            in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
+                            per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
+                            vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
+                            Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
+                            faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
+                            Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis.
+                            Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus,
+                            non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus.
+                        </p>
+                    </div>
+
+                </article>
+
             </section>
             <section id="work-experience">
                 Work experience
@@ -69,7 +101,7 @@
     </div>
     <div class="static-container">
         <footer>
-            footer
+            <p class="bold">Developed by Georgi Brankovanov - 2024</p>
         </footer>
     </div>
 </body>
