--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             aside
         </aside>
         <main>
-            <section id="about-me">
+            <section id="bio" class="bio">
                 <article>
                     <div class="picture-container">
                         <img src="images/pexels-simon-robben-614810.jpg" alt>
