Bio section stylizations and header fix

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     </a>
                 </div>
             </div>
-           
         </header>
     </div>
     <div class="dynamic-container">
@@ -72,7 +71,7 @@
                             faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
                             Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis.
                             Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus,
-                            non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus.
+                            non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus. end
                         </p>
                     </div>
 
