Optimizing general stylizations and header stylizations

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="static-container">
+    <div class="static-container main-header">
         <header>
             <div class="logo">
                 <h1 class="bold">Person name</h1>
@@ -21,7 +21,7 @@
                     <div></div>
                 </button>
                 <div class="header-menu">
-                    <a class="bold" href="#id">
+                    <a class="bold" href="#bio">
                         About me
                     </a>
                     <a class="bold" href="#work-experience">
@@ -74,27 +74,184 @@
                             non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus. end
                         </p>
                     </div>
+                </article>
+            </section>
 
+            <section id="work-experience">
+                <article>
+                    <header>
+                        <h2>Work experience</h2>
+                    </header>
+                    <details>
+                        <summary class="bold">Work position one</summary>
+                        <div class="details-container">
+                            <ul>
+                                <li>
+                                    <label class="bold">Position: </label>Position title
+                                </li>
+                                <li>
+                                    <span class="bold">Duration: </span>Start date - End date - duration
+                                </li>
+                                <li>
+                                    <label class="bold">Location: </label>Location name
+                                </li>
+                            </ul>
+                            <p class="bold">Description:</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+                                pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+                                Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                                in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
+                                per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
+                                vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
+                                Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
+                                faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
+                            </p>
+                        </div>
+
+                    </details>
+                    <details>
+                        <summary class="bold">Work position one</summary>
+                        <div class="details-container">
+                            <ul>
+                                <li>
+                                    <label class="bold">Position: </label>Position title
+                                </li>
+                                <li>
+                                    <span class="bold">Duration: </span>Start date - End date - duration
+                                </li>
+                                <li>
+                                    <label class="bold">Location: </label>Location name
+                                </li>
+                            </ul>
+                            <p class="bold">Description:</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+                                pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+                                Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                                in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
+                                per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
+                                vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
+                                Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
+                                faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
+                            </p>
+                        </div>
+
+                    </details>
+                    <details>
+                        <summary class="bold">Work position one</summary>
+                        <div class="details-container">
+                            <ul>
+                                <li>
+                                    <label class="bold">Position: </label>Position title
+                                </li>
+                                <li>
+                                    <span class="bold">Duration: </span>Start date - End date - duration
+                                </li>
+                                <li>
+                                    <label class="bold">Location: </label>Location name
+                                </li>
+                            </ul>
+                            <p class="bold">Description:</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+                                pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+                                Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                                in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
+                                per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
+                                vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
+                                Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
+                                faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
+                            </p>
+                        </div>
+
+                    </details>
+                </article>
+            </section>
+
+            <section id="education">
+                <article class="education">
+                    <header>
+                        <h2>Education</h2>
+                    </header>
+                </article>
+            </section>
+
+            <section id="courses-and-ceriticates">
+                <article class="courses-and-ceriticates">
+                    <header>
+                        <h2>Courses and Certificates</h2>
+                    </header>
+                    <div class="carousel-container">
+                        <div class="carousel-indicators">
+                            <a href="#1">
+                                1
+                            </a>
+                            <a href="#2">
+                                2
+                            </a>
+                            <a href="#3">
+                                3
+                            </a>
+                            <a href="#4">
+                                4
+                            </a>
+                        </div>
+                        <div class="slide-container">
+                            <div class="slide" id="1">
+                                sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit
+                                posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed
+                                sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam
+                                eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a,
+                                bibendum metus. end
+                            </div>
+                            <div class="slide" id="2">
+                                sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit
+                                posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed
+                                sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam
+                                eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a,
+                                bibendum metus. end
+                            </div>
+                            <div class="slide" id="3">
+                                sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit
+                                posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed
+                                sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam
+                                eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a,
+                                bibendum metus. end
+                            </div>
+                            <div class="slide" id="4">
+                                sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit
+                                posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed
+                                sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam
+                                eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a,
+                                bibendum metus. end
+                            </div>
+                        </div>
+                    </div>
                 </article>
 
             </section>
-            <section id="work-experience">
-                Work experience
-            </section>
-            <section id="education">
-                Education
-            </section>
-            <section id="courses-and-ceriticates">
-                Cources and certificates
-            </section>
+
             <section id="skills">
-                Skills
+                <article class="skills">
+                    <header>
+                        <h2>Skills</h2>
+                    </header>
+                </article>
             </section>
             <section id="languages">
-                Languages
+                <article class="languages">
+                    <header>
+                        <h2>Languages</h2>
+                    </header>
+                </article>
             </section>
             <section id="contacts">
-                Languages
+                <article class="contacts">
+                    <header>
+                        <h2>Contacts</h2>
+                    </header>
+                </article>
             </section>
         </main>
     </div>
