Cources and certificates carousel animation pure css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Static cv website</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-
 <body>
     <div class="static-container main-header">
         <header>
@@ -21,35 +19,19 @@
                     <div></div>
                 </button>
                 <div class="header-menu">
-                    <a class="bold" href="#bio">
-                        About me
-                    </a>
-                    <a class="bold" href="#work-experience">
-                        Work experience
-                    </a>
-                    <a class="bold" href="#education">
-                        Education
-                    </a>
-                    <a class="bold" href="#courses-and-ceriticates">
-                        Cources and certificates
-                    </a>
-                    <a class="bold" href="#skills">
-                        Skills
-                    </a>
-                    <a class="bold" href="#languages">
-                        Languages
-                    </a>
-                    <a class="bold" href="#contacts">
-                        Contacts
-                    </a>
+                    <a class="bold" href="#bio"> About me </a>
+                    <a class="bold" href="#work-experience"> Work experience </a>
+                    <a class="bold" href="#education"> Education </a>
+                    <a class="bold" href="#courses-and-ceriticates"> Cources and certificates </a>
+                    <a class="bold" href="#skills"> Skills </a>
+                    <a class="bold" href="#languages"> Languages </a>
+                    <a class="bold" href="#contacts"> Contacts </a>
                 </div>
             </div>
         </header>
     </div>
     <div class="dynamic-container">
-        <aside>
-            aside
-        </aside>
+        <aside> aside </aside>
         <main>
             <section id="bio" class="bio">
                 <article>
@@ -60,23 +42,19 @@
                         <header>
                             <h2>About me</h2>
                         </header>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
-                            per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
-                            vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
-                            Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
-                            faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
-                            Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis.
-                            Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus,
-                            non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus. end
-                        </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                            facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
+                            sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum eget.
+                            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                            Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut,
+                            pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer
+                            feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc. Phasellus
+                            bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis. Cras pharetra mi
+                            tristique sapien vestibulum lobortis. Nam eget bibendum metus, non dictum mauris. Nulla at
+                            tellus sagittis, viverra est a, bibendum metus. end </p>
                     </div>
                 </article>
             </section>
-
             <section id="work-experience">
                 <article>
                     <header>
@@ -97,18 +75,15 @@
                                 </li>
                             </ul>
                             <p class="bold">Description:</p>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                                pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                                Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                                in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
-                                per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
-                                vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
-                                Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
-                                faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
-                            </p>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                                facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
+                                sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
+                                eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
+                                posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
+                                leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
+                                nunc. </p>
                         </div>
-
                     </details>
                     <details>
                         <summary class="bold">Work position one</summary>
@@ -125,18 +100,15 @@
                                 </li>
                             </ul>
                             <p class="bold">Description:</p>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                                pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                                Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                                in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
-                                per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
-                                vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
-                                Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
-                                faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
-                            </p>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                                facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
+                                sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
+                                eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
+                                posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
+                                leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
+                                nunc. </p>
                         </div>
-
                     </details>
                     <details>
                         <summary class="bold">Work position one</summary>
@@ -153,22 +125,18 @@
                                 </li>
                             </ul>
                             <p class="bold">Description:</p>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                                pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                                Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                                in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent
-                                per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut
-                                vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor.
-                                Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat
-                                faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
-                            </p>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                                facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
+                                sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
+                                eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
+                                posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
+                                leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
+                                nunc. </p>
                         </div>
-
                     </details>
                 </article>
             </section>
-
             <section id="education">
                 <article class="education">
                     <header>
@@ -176,7 +144,6 @@
                     </header>
                 </article>
             </section>
-
             <section id="courses-and-ceriticates">
                 <article class="courses-and-ceriticates">
                     <header>
@@ -184,7 +151,7 @@
                     </header>
                     <div class="carousel-container">
                         <div class="carousel-indicators">
-                            <a href="#1">
+                            <!-- <a href="#1">
                                 1
                             </a>
                             <a href="#2">
@@ -195,43 +162,34 @@
                             </a>
                             <a href="#4">
                                 4
-                            </a>
+                            </a> -->
+                            <!-- <input type="radio" name="slides"  id="slide-1" checked="checked"> -->
+                            <label for="slide-1">1</label>
+                            <label for="slide-2">2</label>
+                            <label for="slide-3">3</label>
+                            <label for="slide-4">4</label>
                         </div>
+                        <input type="radio" name="slides" id="slide-1" checked="checked">
+                        <input type="radio" name="slides" id="slide-2">
+                        <input type="radio" name="slides" id="slide-3">
+                        <input type="radio" name="slides" id="slide-4">
                         <div class="slide-container">
-                            <div class="slide" id="1">
-                                sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit
-                                posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed
-                                sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam
-                                eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a,
-                                bibendum metus. end
+                            <div class="slide" id="1"> 
+                                1 
                             </div>
-                            <div class="slide" id="2">
-                                sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit
-                                posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed
-                                sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam
-                                eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a,
-                                bibendum metus. end
+                            <div class="slide" id="2"> 
+                                2 
                             </div>
-                            <div class="slide" id="3">
-                                sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit
-                                posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed
-                                sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam
-                                eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a,
-                                bibendum metus. end
+                            <div class="slide" id="3"> 
+                                3 
                             </div>
                             <div class="slide" id="4">
-                                sagittis id vel leo. Integer feugiat faucibus libero, at maximus nisl suscipit
-                                posuere. Morbi nec enim nunc. Phasellus bibendum turpis ut ipsum egestas, sed
-                                sollicitudin elit convallis. Cras pharetra mi tristique sapien vestibulum lobortis. Nam
-                                eget bibendum metus, non dictum mauris. Nulla at tellus sagittis, viverra est a,
-                                bibendum metus. end
+                                 4 
                             </div>
                         </div>
                     </div>
                 </article>
-
             </section>
-
             <section id="skills">
                 <article class="skills">
                     <header>
@@ -261,5 +219,4 @@
         </footer>
     </div>
 </body>
-
 </html>
