Start language section

--- a/index.html
+++ b/index.html
@@ -174,18 +174,10 @@
                         <input type="radio" name="slides" id="slide-3">
                         <input type="radio" name="slides" id="slide-4">
                         <div class="slide-container">
-                            <div class="slide" id="1"> 
-                                1 
-                            </div>
-                            <div class="slide" id="2"> 
-                                2 
-                            </div>
-                            <div class="slide" id="3"> 
-                                3 
-                            </div>
-                            <div class="slide" id="4">
-                                 4 
-                            </div>
+                            <div class="slide" id="1"> 1 </div>
+                            <div class="slide" id="2"> 2 </div>
+                            <div class="slide" id="3"> 3 </div>
+                            <div class="slide" id="4"> 4 </div>
                         </div>
                     </div>
                 </article>
@@ -202,6 +194,37 @@
                     <header>
                         <h2>Languages</h2>
                     </header>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Language</th>
+                                <th>Speaking</th>
+                                <th>Writting</th>
+                                <th>Reading</th>
+                                <th>Grammar</th>
+                            </tr>
+                        </thead>
+                        <tr>
+                            <th>Language</th>
+                            <td>English</td>
+                        </tr>
+                        <tr>
+                            <th>Speaking</th>
+                            <td>C</td>
+                        </tr>
+                        <tr>
+                            <th>Writting</th>
+                                <td>C</td>
+                        </tr>
+                        <tr>
+                            <th>Reading</th>
+                            <td>C</td>
+                        </tr>
+                        <tr>
+                            <th>Grammar</th>
+                            <td>C</td>
+                        </tr>
+                    </table>
                 </article>
             </section>
             <section id="contacts">
