--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Static cv website</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <div class="static-container main-header">
         <header>
@@ -36,7 +38,7 @@
             <section id="bio" class="bio">
                 <article>
                     <div class="picture-container">
-                        <img src="images/pexels-simon-robben-614810.jpg" alt>
+                        <img src="images/pexels-simon-robben-614810.jpg" alt="Person name">
                     </div>
                     <div class="content-container">
                         <header>
@@ -82,7 +84,8 @@
                                 himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
                                 posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
                                 leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
-                                nunc. </p>
+                                nunc. 
+                            </p>
                         </div>
                     </details>
                     <details>
@@ -150,34 +153,150 @@
                         <h2>Courses and Certificates</h2>
                     </header>
                     <div class="carousel-container">
-                        <div class="carousel-indicators">
-                            <!-- <a href="#1">
-                                1
-                            </a>
-                            <a href="#2">
-                                2
-                            </a>
-                            <a href="#3">
-                                3
-                            </a>
-                            <a href="#4">
-                                4
-                            </a> -->
-                            <!-- <input type="radio" name="slides"  id="slide-1" checked="checked"> -->
-                            <label for="slide-1">1</label>
-                            <label for="slide-2">2</label>
-                            <label for="slide-3">3</label>
-                            <label for="slide-4">4</label>
-                        </div>
                         <input type="radio" name="slides" id="slide-1" checked="checked">
                         <input type="radio" name="slides" id="slide-2">
                         <input type="radio" name="slides" id="slide-3">
                         <input type="radio" name="slides" id="slide-4">
                         <div class="slide-container">
-                            <div class="slide" id="1"> 1 </div>
-                            <div class="slide" id="2"> 2 </div>
-                            <div class="slide" id="3"> 3 </div>
-                            <div class="slide" id="4"> 4 </div>
+                            <div class="slide">
+                                <div>
+                                    <img src="images/certificate_1.png" alt="Elephant at sunset" />
+                                </div>
+                                <div>
+                                    <ul>
+                                        <li>
+                                            <label class="bold">Cerrificate name: </label>Certificate name
+                                        </li>
+                                        <li>
+                                            <label class="bold">Issuing organization </label>Organization name
+                                        </li>
+                                        <li>
+                                            <span class="bold">Issue date: </span>Start date
+                                        </li>
+                                        <li>
+                                            <span class="bold">Expiration date: </span>End date
+                                        </li>
+                                        <li>
+                                            <span class="bold">Credential ID: </span>ID Number
+                                        </li>
+                                        <li>
+                                            <a class="bold" href="#">Credential URL</a>
+                                        </li>
+                                    </ul>
+                                    <p class="bold">Description:</p>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                                        facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
+                                        sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
+                                        eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                        himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
+                                        posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
+                                        leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
+                                        nunc. 
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div>
+                                    <img src="images/certificate_2.png" alt="Elephant at sunset" />
+                                </div>
+                                <div>
+                                    <ul>
+                                        <li>
+                                            <label class="bold">Cerrificate name: </label>Certificate name
+                                        </li>
+                                        <li>
+                                            <label class="bold">Issuing organization </label>Organization name
+                                        </li>
+                                        <li>
+                                            <span class="bold">Issue date: </span>Start date
+                                        </li>
+                                        <li>
+                                            <span class="bold">Expiration date: </span>End date
+                                        </li>
+                                        <li>
+                                            <span class="bold">Credential ID: </span>ID Number
+                                        </li>
+                                        <li>
+                                            <a class="bold" href="#">Credential URL</a>
+                                        </li>
+                                    </ul>
+                                    <p class="bold">Description:</p>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                                        facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
+                                        sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="slide" id="3">
+                                <div>
+                                    <img src="images/certificate_1.png" alt="Elephant at sunset" />
+                                </div>
+                                <div>
+                                    <ul>
+                                        <li>
+                                            <label class="bold">Cerrificate name: </label>Certificate name
+                                        </li>
+                                        <li>
+                                            <label class="bold">Issuing organization </label>Organization name
+                                        </li>
+                                        <li>
+                                            <span class="bold">Issue date: </span>Start date
+                                        </li>
+                                        <li>
+                                            <a class="bold" href="#">Credential URL</a>
+                                        </li>
+                                    </ul>
+                                    <p class="bold">Description:</p>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="slide" id="4">
+                                <div class="content">
+                                    <ul>
+                                        <li>
+                                            <label class="bold">Cerrificate name: </label>Certificate name
+                                        </li>
+                                        <li>
+                                            <label class="bold">Issuing organization </label>Organization name
+                                        </li>
+                                        <li>
+                                            <span class="bold">Issue date: </span>Start date
+                                        </li>
+                                        <li>
+                                            <span class="bold">Credential ID: </span>ID Number
+                                        </li>
+                                        
+                                    </ul>
+                                    <p class="bold">Description:</p>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                                        facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
+                                        sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
+                                        eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                        himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
+                                        posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
+                                        leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
+                                        nunc.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                                        facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
+                                        sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
+                                        eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                        himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
+                                        posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
+                                        leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
+                                        nunc. 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-indicators">
+                            <label for="slide-1"></label>
+                            <label for="slide-2"></label>
+                            <label for="slide-3"></label>
+                            <label for="slide-4"></label>
                         </div>
                     </div>
                 </article>
@@ -194,7 +313,7 @@
                     <header>
                         <h2>Languages</h2>
                     </header>
-                    <table>
+<table>
                         <thead>
                             <tr>
                                 <th>Language</th>
