--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Static cv website</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-
 <body>
     <div class="static-container main-header">
         <header>
             <div class="logo">
-                <h1 class="bold">Person name</h1>
+                <h1 class="bold"> Person name </h1>
             </div>
             <div class="header-wrapper">
                 <button>
@@ -44,7 +42,8 @@
                         <header>
                             <h2>About me</h2>
                         </header>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                        <p> 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
                             facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
                             sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum eget.
                             Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
@@ -53,11 +52,12 @@
                             feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc. Phasellus
                             bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis. Cras pharetra mi
                             tristique sapien vestibulum lobortis. Nam eget bibendum metus, non dictum mauris. Nulla at
-                            tellus sagittis, viverra est a, bibendum metus. end </p>
+                            tellus sagittis, viverra est a, bibendum metus. end 
+                        </p>
                     </div>
                 </article>
             </section>
-            <section id="work-experience">
+            <section id="work-experience" class="work-experience">
                 <article>
                     <header>
                         <h2>Work experience</h2>
@@ -77,7 +77,8 @@
                                 </li>
                             </ul>
                             <p class="bold">Description:</p>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                            <p>
+                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
                                 facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
                                 sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
                                 eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
@@ -103,14 +104,16 @@
                                 </li>
                             </ul>
                             <p class="bold">Description:</p>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                            <p>
+                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
                                 facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
                                 sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
                                 eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
                                 himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
                                 posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
                                 leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
-                                nunc. </p>
+                                nunc. 
+                            </p>
                         </div>
                     </details>
                     <details>
@@ -128,14 +131,16 @@
                                 </li>
                             </ul>
                             <p class="bold">Description:</p>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
+                            <p>
+                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
                                 facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
                                 sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
                                 eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
                                 himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
                                 posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
                                 leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
-                                nunc. </p>
+                                nunc. 
+                            </p>
                         </div>
                     </details>
                 </article>
@@ -184,16 +189,17 @@
                                         </li>
                                     </ul>
                                     <p class="bold">Description:</p>
-                                    <p class="description">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
-                                        facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
-                                        sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
-                                        eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                                        himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
-                                        posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
-                                        leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
-                                        nunc. 
-                                    </p>
+                                    <p class="description"> 
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Quisque nisl eros, pulvinar facilisis justo mollis, auctor consequat urna. Morbi
+                                        a bibendum metus. Donec scelerisque sollicitudin enim eu venenatis. Duis
+                                        tincidunt laoreet ex, in pretium orci vestibulum eget. Class aptent taciti
+                                        sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis
+                                        pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis posuere
+                                        ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
+                                        leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi
+                                        nec enim nunc.
+                                     </p>
                                 </div>
                             </div>
                             <div class="slide">
@@ -223,9 +229,10 @@
                                     </ul>
                                     <p class="bold">Description:</p>
                                     <p class="description">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
-                                        facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
-                                        sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Quisque nisl eros, pulvinar facilisis justo mollis, auctor consequat urna. Morbi
+                                        a bibendum metus. Donec scelerisque sollicitudin enim eu venenatis. Duis
+                                        tincidunt laoreet ex, in pretium orci vestibulum 
                                     </p>
                                 </div>
                             </div>
@@ -249,9 +256,8 @@
                                         </li>
                                     </ul>
                                     <p class="bold">Description:</p>
-                                    <p class="description">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
-                                    </p>
+                                    <p class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Quisque nisl eros, pulvinar </p>
                                 </div>
                             </div>
                             <div class="slide" id="4">
@@ -269,25 +275,25 @@
                                         <li>
                                             <span class="bold">Credential ID: </span>ID Number
                                         </li>
-                                        
                                     </ul>
                                     <p class="bold">Description:</p>
-                                    <p class="description">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
-                                        facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
-                                        sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
-                                        eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                                        himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
-                                        posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
-                                        leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
-                                        nunc.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar
-                                        facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec scelerisque
-                                        sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci vestibulum
-                                        eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                                        himenaeos. Duis pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
-                                        posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
-                                        leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
-                                        nunc. 
+                                    <p class="description"> 
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Quisque nisl eros, pulvinar facilisis justo mollis, auctor consequat urna. Morbi
+                                        a bibendum metus. Donec scelerisque sollicitudin enim eu venenatis. Duis
+                                        tincidunt laoreet ex, in pretium orci vestibulum eget. Class aptent taciti
+                                        sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis
+                                        pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis posuere
+                                        ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel
+                                        leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi
+                                        nec enim nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                                        nisl eros, pulvinar facilisis justo mollis, auctor consequat urna. Morbi a
+                                        bibendum metus. Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt
+                                        laoreet ex, in pretium orci vestibulum eget. Class aptent taciti sociosqu ad
+                                        litora torquent per conubia nostra, per inceptos himenaeos. Duis pharetra luctus
+                                        lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar
+                                        vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer
+                                        feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
                                     </p>
                                 </div>
                             </div>
@@ -313,7 +319,7 @@
                     <header>
                         <h2>Languages</h2>
                     </header>
-<table>
+                    <table>
                         <thead>
                             <tr>
                                 <th>Language</th>
@@ -333,7 +339,7 @@
                         </tr>
                         <tr>
                             <th>Writting</th>
-                                <td>C</td>
+                            <td>C</td>
                         </tr>
                         <tr>
                             <th>Reading</th>
